# BosonUSB

./: .gitignore  CMakeLists.txt
include/: CameraStreamer.hpp  StereoSync.hpp  cvMatContainer.hpp
src/: CameraStreamer.cpp  StereoSync.cpp  cvMatContainer.cpp  main.cpp  test2.cpp  test_run.cpp
